Fixing odd layout bug with columns and transitions

--- a/src/_src/css/components/_Comrades.css
+++ b/src/_src/css/components/_Comrades.css
@@ -11,6 +11,7 @@
                 column-count: 3;
                 column-width: 30%;
                 column-gap: 2rem;
+                backface-visibility: hidden; /* fix layout issues caused by transitions elsewhere */
             }
         }
 
